Fixed Videos Carousel alignment (6624)

--- a/css/common/owl-carousel.less
+++ b/css/common/owl-carousel.less
@@ -106,6 +106,16 @@
 		text-align : center;
 		width      : 100%;
 	}
+
+	&.videos-carousel {
+		.owl-stage-outer {
+			margin-left : 15px;
+
+			.owl-stage {
+				margin-left : -15px;
+			}
+		}
+	}
 }
 
 .owl-nav {
